# ChronoGraph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
bindings/: CMakeLists.txt  chronograph_py.cpp
docs/: examples.md  index.md  installation.md  quick_start.md
docs/api/: algorithms.md  graph.md  repo.md
docs/bindings/: python_bindings.md
docs/tutorials/: algorithm_basics.md  graph_basics.md  repository_basics.md
examples/: CMakeLists.txt  example_graph_demo.cpp  example_repo.cpp
examples/python/: demo.py
include/chronograph/: Event.h  Graph.h  Node.h  Repository.h  Snapshot.h
include/chronograph/graph/: Edge.h  Event.h  Graph.h  Node.h  Snapshot.h
include/chronograph/graph/algorithms/: Connectivity.h  Paths.h
include/chronograph/graph/utils/: Visual.h
include/chronograph/repo/: Repository.h
include/chronograph/repo/utils/: printUtils.h
src/: Edge.cpp  Event.cpp  Graph.cpp  Node.cpp  Repository.cpp  Snapshot.cpp
src/chronograph/cli/: CMakeLists.txt  main.cpp
src/chronograph/graph/: CMakeLists.txt  Graph.cpp  Snapshot.cpp
src/chronograph/graph/algorithms/: CMakeLists.txt  Connectivity.cpp  Paths.cpp
src/chronograph/graph/utils/: CMakeLists.txt  Visual.cpp
src/chronograph/repo/: CMakeLists.txt  Repository.cpp
src/chronograph/repo/utils/: CMakeLists.txt  printUtils.cpp
tests/: CMakeLists.txt  test_Algorithms.cpp  test_Connectivity.cpp  test_Diff.cpp  test_Graph.cpp  test_Merge.cpp  test_Reachability.cpp  test_Repository.cpp  test_Snapshot.cpp
tests/cpp/: CMakeLists.txt  test_Graph.cpp  test_Reachability.cpp  test_Repository.cpp  test_Snapshot.cpp
tests/python/: CMakeLists.txt  conftest.py  test_algorithms.py  test_graph.py  test_repo.py
